--- a/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/Tile Data/Buildings.ini
+++ b/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/Tile Data/Buildings.ini
@@ -3,7 +3,7 @@ Format = 9
 
 [DEFINE BUILDINGS]
 ; Building Definition Format:
-; {str_ID|i_Width|i_Height|i_Team|i_OffsetY|url_FullImage|url_ShadowImage}
+; {str_Id|i_Width|i_Height|i_Team|i_OffsetY|url_FullImage|url_ShadowImage}
 Building0 = {BA_good|2|4|0|0|Buildings/Astros/BA_good.png|Buildings/Astros/BA_good_shadow.png}
 Building1 = {BB_good|1|2|0|0|Buildings/Astros/BB_good.png|Buildings/Astros/BB_good_shadow.png}
 Building2 = {BC_good|2|2|0|0|Buildings/Astros/BC_good.png|Buildings/Astros/BC_good_shadow.png}
