--- a/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/Tile Data/Terrain.ini
+++ b/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/Tile Data/Terrain.ini
@@ -3,7 +3,7 @@ Format = 8
 
 [DEFINE TERRAIN]
 ; Terrain Definition Format:
-; {str_ID|bool_IsPassable|bool_IsMinerals|url_Image}
+; {str_Id|bool_IsPassable|bool_IsMinerals|url_Image}
 Terrain0 = {5|False|False|Tiles/Tile5.png}
 Terrain1 = {2|False|False|Tiles/Tile2.png}
 Terrain2 = {6|False|False|Tiles/Tile6.png}
