Renamed "Save Data" folder to "Maps".

--- a/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker).vbproj
+++ b/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker).vbproj
@@ -267,7 +267,32 @@
     <None Include="icons\CAMMFile.ico" />
     <None Include="icons\Crystal.ico" />
     <Content Include="lib\*" />
-    <Content Include="Save Data\*" />
+    <Content Include="Maps\AnotherTest.map" />
+    <Content Include="Maps\Blank.map" />
+    <Content Include="Maps\Building_Debug.map" />
+    <Content Include="Maps\Building_Upgrade_Test.map" />
+    <Content Include="Maps\Building_Upgrade_Test_2.map" />
+    <Content Include="Maps\Crystal Valley.camm" />
+    <Content Include="Maps\Format.map" />
+    <Content Include="Maps\Import Test.map" />
+    <Content Include="Maps\Map4.camm" />
+    <Content Include="Maps\Overlap Test.map" />
+    <Content Include="Maps\ReadOnly.map" />
+    <Content Include="Maps\Spiral.map" />
+    <Content Include="Maps\Strange Map Design.camm" />
+    <Content Include="Maps\Test 2.map" />
+    <Content Include="Maps\Test 3.map" />
+    <Content Include="Maps\Test 4.camm" />
+    <Content Include="Maps\Test Map 2.map" />
+    <Content Include="Maps\Test Map 3.camm" />
+    <Content Include="Maps\Test Map 3.map" />
+    <Content Include="Maps\Test Map 4.camm" />
+    <Content Include="Maps\Test Map 4.map" />
+    <Content Include="Maps\Test Map.map" />
+    <Content Include="Maps\Test.map" />
+    <Content Include="Maps\Test1.camm" />
+    <Content Include="Maps\Test2.camm" />
+    <Content Include="Maps\TestBlank.map" />
     <Content Include="CAMM_Data\Buildings.ini" />
     <Content Include="CAMM_Data\Config.ini" />
     <Content Include="CAMM_Data\Terrain.ini" />
