Removed unnecessary commands in post-build event.

--- a/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker).vbproj
+++ b/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker).vbproj
@@ -500,9 +500,7 @@
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy /Y /B "$(TargetPath)" "$(TargetPath).tmp"
-"$(ProjectDir)InsertIcons.exe" "$(TargetPath).tmp" "$(ProjectDir)\icons"
-move /Y "$(TargetPath).tmp" "$(TargetPath)"</PostBuildEvent>
+    <PostBuildEvent>"$(ProjectDir)InsertIcons.exe" "$(TargetPath)" "$(ProjectDir)icons"</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PreBuildEvent>
