Cleanup default maps a bit

--- a/Crystal-Alien-Map-Maker/CAMM.vbproj
+++ b/Crystal-Alien-Map-Maker/CAMM.vbproj
@@ -288,8 +288,6 @@
     <Content Include="CAMM_Data\Brushes\Rectangle\RockBorders.ini" />
     <Content Include="CAMM_Data\Brushes\Rectangle\Valley-NS.ini" />
     <Content Include="CAMM_Data\Brushes\Rectangle\Valley-WE.ini" />
-    <Content Include="CAMM_Data\Default_Maps\Astro Level 1.camm" />
-    <Content Include="CAMM_Data\Default_Maps\Astro Level 6.map" />
     <Content Include="CAMM_Data\Backgrounds\Mars.png" />
     <Content Include="CAMM_Data\Baseplates\Alien1x2.png" />
     <Content Include="CAMM_Data\Baseplates\Alien2x2.png" />
@@ -497,7 +495,9 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="CAMM_Data\Default_Maps\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <PropertyGroup>
     <PostBuildEvent>"$(ProjectDir)InsertIcons.exe" "$(TargetPath)" "$(ProjectDir)icons"</PostBuildEvent>
