--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,12 @@ assembly_info:
   assembly_version: '{version}.{build}'
   assembly_file_version: '{version}.{build}'
   assembly_informational_version: '{version}.{build}-{branch}'
+install:
+- cmd: appveyor DownloadFile https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
+cache:
+- packages -> **\packages.config
+before_build:
+- cmd: appveyor-retry nuget restore -DisableParallelProcessing
 build:
   project: Crystal-Alien-Map-Maker.sln
   verbosity: minimal
