--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,7 @@
 version: 1.3.0.{build}-{branch}
 pull_requests:
   do_not_increment_build_number: true
+image: Visual Studio 2017
 configuration: Release
 platform: x86
 shallow_clone: true
@@ -13,8 +14,7 @@ assembly_info:
   assembly_informational_version: '{version}.{build}-{branch}'
 install:
 - cmd: appveyor DownloadFile https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
-cache:
-- packages -> **\packages.config
+cache: packages -> **\packages.config
 before_build:
 - cmd: appveyor-retry nuget restore -DisableParallelProcessing
 build:
@@ -28,3 +28,5 @@ artifacts:
 deploy:
 - provider: Environment
   name: CACRedux-CAMM
+  on:
+    branch: master
