--- a/Crystal-Alien-Map-Maker/CAMM.vbproj
+++ b/Crystal-Alien-Map-Maker/CAMM.vbproj
@@ -160,6 +160,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="src\GUI\Forms\FrmAbout.Designer.vb">
+      <DependentUpon>FrmAbout.vb</DependentUpon>
+    </Compile>
+    <Compile Include="src\GUI\Forms\FrmAbout.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="src\GUI\Forms\FrmBuildingProperties.Designer.vb">
       <DependentUpon>FrmBuildingProperties.vb</DependentUpon>
     </Compile>
@@ -255,6 +261,9 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="src\GUI\Forms\FrmAbout.resx">
+      <DependentUpon>FrmAbout.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="src\GUI\Forms\FrmExportAS.resx">
       <DependentUpon>FrmExportAS.vb</DependentUpon>
