First release version! :tada: Lots of changes in this one: - Added the play level feature! You can now play levels if you install the CAC Player. - Added a new sample level that's fully playable created by myself in this very editor. - Increased maximum level size from 30x30 to 60x60. - Added level access code to the map properties. - Added one missing rectangle terrain brush. - Some UI tweaks for the main editor window. - Improved error handling when loading the editor assets. - Several additional bug fixes.

--- a/Crystal-Alien-Map-Maker/CAMM.vbproj
+++ b/Crystal-Alien-Map-Maker/CAMM.vbproj
@@ -297,7 +297,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="CAMM_Data\Icons\CAMMFile.ico" />
+    <None Include="CAMM_Data\Icons\CAMMFile.ico" />
     <None Include="CAMM_Data\Icons\Crystal.ico" />
     <None Include="CAMM_Data\Sources\BuildingButtonTest.xcf" />
     <None Include="app.config" />
@@ -328,6 +328,7 @@
     <Content Include="CAMM_Data\Brushes\Rectangle\River-WE.json" />
     <Content Include="CAMM_Data\Brushes\Rectangle\RockBorders.json" />
     <Content Include="CAMM_Data\Brushes\Rectangle\Valley-NS.json" />
+    <Content Include="CAMM_Data\Brushes\Rectangle\Valley.json" />
     <Content Include="CAMM_Data\Brushes\Rectangle\Valley-WE.json" />
     <Content Include="CAMM_Data\Backgrounds\Mars.png" />
     <Content Include="CAMM_Data\Baseplates\Alien1x2.png" />
@@ -339,6 +340,7 @@
     <Content Include="CAMM_Data\UI\Buttons\Blank.png" />
     <Content Include="CAMM_Data\UI\Buttons\NeutralBackground.png" />
     <Content Include="CAMM_Data\UI\Buttons\Overlay.png" />
+    <Content Include="CAMM_Data\UI\Buttons\Play.png" />
     <Content Include="CAMM_Data\UI\Indicators\AlienTeam.png" />
     <Content Include="CAMM_Data\UI\Indicators\AstroTeam.png" />
     <Content Include="CAMM_Data\UI\Indicators\NeutralTeam.png" />
