--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 version: 1.4.0.{build}-{branch}
 pull_requests:
   do_not_increment_build_number: true
-image: Visual Studio 2017
+image: Visual Studio 2019
 configuration: Release
 platform: x86
 shallow_clone: true
@@ -19,10 +19,12 @@ before_build:
 - cmd: appveyor-retry nuget restore -DisableParallelProcessing
 build:
   project: Crystal-Alien-Map-Maker.sln
-  verbosity: minimal
+  verbosity: normal
 after_build:
-- cmd: set APPVEYOR_REPO_COMMIT=%APPVEYOR_REPO_COMMIT:~0,8%
-- cmd: 7z a "CAMM-Windows-%PLATFORM%-%APPVEYOR_BUILD_VERSION%-%APPVEYOR_REPO_COMMIT%.zip" "%APPVEYOR_BUILD_FOLDER%\Crystal-Alien-Map-Maker\bin\%PLATFORM%\%CONFIGURATION%\Crystal Alien Map Maker.exe" "%APPVEYOR_BUILD_FOLDER%\Crystal-Alien-Map-Maker\bin\%PLATFORM%\%CONFIGURATION%\*.dll" "%APPVEYOR_BUILD_FOLDER%\Crystal-Alien-Map-Maker\CAMM_Data" "%APPVEYOR_BUILD_FOLDER%\Crystal-Alien-Map-Maker\Maps" "%APPVEYOR_BUILD_FOLDER%\LICENSE" "%APPVEYOR_BUILD_FOLDER%\README.md"
+- cmd: >-
+    set APPVEYOR_REPO_COMMIT=%APPVEYOR_REPO_COMMIT:~0,8%
+
+    7z a "CAMM-Windows-%PLATFORM%-%APPVEYOR_BUILD_VERSION%-%APPVEYOR_REPO_COMMIT%.zip" "%APPVEYOR_BUILD_FOLDER%\Crystal-Alien-Map-Maker\bin\%PLATFORM%\%CONFIGURATION%\Crystal Alien Map Maker.exe" "%APPVEYOR_BUILD_FOLDER%\Crystal-Alien-Map-Maker\bin\%PLATFORM%\%CONFIGURATION%\*.dll" "%APPVEYOR_BUILD_FOLDER%\Crystal-Alien-Map-Maker\CAMM_Data" "%APPVEYOR_BUILD_FOLDER%\Crystal-Alien-Map-Maker\Maps" "%APPVEYOR_BUILD_FOLDER%\LICENSE" "%APPVEYOR_BUILD_FOLDER%\README.md"
 artifacts:
 - path: CAMM-Windows-$(PLATFORM)-$(APPVEYOR_BUILD_VERSION)-$(APPVEYOR_REPO_COMMIT).zip
 deploy:
